# flight

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  build_and_test.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml
include/: aircraft.h  aircraft_data.h  maths.h
src/: aircraft.cpp  aircraft_data.cpp  main.cpp  maths.cpp
tests/: test_aircraft.cpp  test_maths.cpp
